# aztec-typescript-experiments

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
client/: Cargo.toml
client/src/: main.rs
contract/: Nargo.toml  codegenCache.json
contract/src/: main.nr
contract/src/artifacts/: Main.ts
sequencer/: Cargo.toml  default.nix
sequencer/src/: aztec_rpc_client.rs  contract_function_interaction.rs  encoder.rs  fields.rs  main.rs  update_feeds.rs  utils.rs
src/: deploy.ts  server.ts
tests/: main.test.ts
