[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"                                                # Ensure this matches the tokio-tungstenite version
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
url = "2.5"
