[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[dependencies]
bigint = "4.4.3"
hex = "0.4.3"
num-bigint = "0.4.6"
num-traits = "0.2.19"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
